timeline/virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: timeline
spec:
  hosts:
    - timeline.lth.so
  gateways:
    - istio-ingress/public-gateway
  http:
    - route:
        - destination:
            host: timeline.timeline.svc.cluster.local
            port:
              number: 3000
